# ralph-vault-skill

./: .gitignore  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  SKILL.md  install.sh  pyproject.toml
.cla-signatures/v1/: cla.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dep-scan.yml  license-check.yml  release.yml  scorecard.yml
agents/: openai.yaml
assets/prompts/: bootstrap.md  components.md  cross-link.md  dependencies.md  judge.md  reconcile.md  relations.md  sync.md
assets/stack-tasks/: frontend.md  generic.md  go.md  java.md  node.md  python.md  scala.md
assets/templates/: component.md  config.example.json  frontmatter-spec.md  infrastructure-piece.md  pre-commit.sh  relation-edge.md  repo-card.md  repo-section.md  technology.md  vault-check.yml
references/: add.md  check.md  ci.md  components.md  config.md  delete.md  dependencies.md  external-provider-research.md  init.md  plan.md  relations.md  update.md  validate.md  vault-structure.md
scripts/: gv.py
tests/: conftest.py  test_gv.py
